<resources>
    <string name="app_name">AndroidMVVMLogin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_title">Sign In</string>
    <string name="get_started">Get Started</string>
</resources>