<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient_bg"
    tools:context=".ui.login.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="70dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCenterHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvGetStarted"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login_lottie.json"
        app:lottie_loop="true" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/m"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenterHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30" />

    <TextView
        android:id="@+id/tvGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/get_started_bg"
        android:padding="6dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/login_form_bg"
        android:backgroundTint="@color/light_grey_color_40"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_form_bg"
        android:fitsSystemWindows="true"
        android:paddingTop="24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/signInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUserName"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_input_bg"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:visibility="visible"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInTitle"
            tools:ignore="RtlSymmetry">


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_username"
                android:imeOptions="actionGo"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_input_bg"
            android:paddingStart="8dp"
            android:visibility="visible"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputUserName"
            app:passwordToggleEnabled="true"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:paddingVertical="14dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputPassword" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Or Sign in with"
            android:textColor="@color/light_grey_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <View
            android:id="@+id/viewLine1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/light_grey_color_40"
            android:backgroundTint="@color/light_grey_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <View
            android:id="@+id/viewLine2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/light_grey_color_40"
            android:backgroundTint="@color/light_grey_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />


        <LinearLayout
            android:id="@+id/llGoogleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/login_input_bg"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:src="@drawable/google_ic"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="Google"
                android:textStyle="bold" />

        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".50" />


        <LinearLayout
            android:id="@+id/llFacebookButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/login_input_bg"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:src="@drawable/facebook_ic"
                app:tint="@color/colorFacebook"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="Facebook"
                android:textColor="@color/colorFacebook"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>